# sylarServer

./: CMakeLists.txt  README.md  run.sh
loglist/: log.txt
readMe/: Hook模块.md  IO协程调度.md  httpDispatcher.md  httpServer模块.md  httpSession.md  互斥锁模块.md  初始化配置模块.md  协程模块.md  协程调度.md  字节序列模块.md  日志模块.md  线程模块.md
src/: configuration.yaml
src/Address/: address.cpp  address.hpp
src/ByteArray/: bytearray.cpp  bytearray.hpp
src/Config/: config.cpp  config.h  config.hpp
src/Coroutine/: coroutine.cpp  coroutine.hpp
src/FdMng/: fdMng.cpp  fdMng.hpp
src/Hook/: fdMng.cpp  fdMng.hpp  hook.cpp  hook.hpp
src/Http/: http.cpp  http.hpp  http11_parser.cpp  http11_parser.h  http11_parser.rl  http_parser.cpp  http_parser.h  http_serv_function.cpp  http_serv_function.hpp  http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp  httpclient_parser.cpp  httpclient_parser.rl
src/IOmanager/: iomanager.cpp  iomanager.hpp
src/Lock/: Lock.cpp  Lock.hpp  Noncopyable.hpp  lock.cpp  lock.hpp
src/Log/: log.cpp  log.h  log.hpp
src/Scheduler/: schedule.cpp  schedule.hpp  scheduler.cpp
src/Singlem/: singlem.h  singlem.hpp
src/Socket/: socket.cpp  socket.hpp
src/Stream/: socket_stream.cpp  socket_stream.hpp  stream.cpp  stream.hpp
src/TcpServer/: tcp_server.cpp  tcp_server.hpp
src/Thread/: Thread.cpp  Thread.hpp  thread.cpp  thread.hpp
src/Timer/: timer.cpp  timer.hpp
src/Util/: byteSwapGaiya.hpp  endian.hpp  head.hpp  macro.hpp  util.cpp  util.h  util.hpp
tester/: configTest.yaml  log.txt  log.yaml  main.cpp  te.txt  testAddress.cpp  testByteArray.cpp  testConfig.cpp  testCoroutine.cpp  testEachServer.cpp  testEpoll  testEpoll.cpp  testHook.cpp  testHttpServFunc.cpp  testIOmanager.cpp  testLog.cpp  testMacro.cpp  testScheduler.cpp  testSocket.cpp  testSocketStream.cpp  testTcpServer.cpp  testThread.cpp
